--- a/gb/24/2/28/n14190636.md
+++ b/gb/24/2/28/n14190636.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>王友群：后悔加入中共的才女韦君宜</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>王友群：亲历十九痛 后悔加入中共的才女</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14190637-1-179.jpeg" />
 <h6>图为乌云密布的北京天安门广场。(Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2024年02月28日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9F%A6%E5%90%9B%E5%AE%9C.md#1">韦君宜</a>，祖籍湖北，1917年生于北京，父亲曾留学日本。她从小聪慧过人，后成为清华大学的高才生。她的父亲断定她是栋梁之材，想送她到美国深造。她却毅然抛弃这一切，投奔中共。</p>
+	<p>【大纪元2024年02月28日讯】韦君宜，祖籍湖北，1917年生于北京，父亲曾留学日本。她从小聪慧过人，后成为清华大学的高才生。她的父亲断定她是栋梁之材，想送她到美国深造。她却毅然抛弃这一切，投奔中共。</p>
 <p>1936年，她18岁时，加入中共；1986年，她68岁，从人民文学出版社社长兼总编的位置上退休。在追随中共的50年里，她经历了许多刻骨铭心、痛彻心扉的人和事。</p>
-<p>1986年4月，她因脑溢血偏瘫；1987年，右臂摔伤骨折；1989年，再患脑血栓；1991年，骨盆又震裂。就在这接二连三、难以承受的病痛打击和折磨下，在右手神经已经坏死的情况下，她以超常的意志，练习写字、走路、写作。最后，在病床上，用左手，写完了她一生最重要的作品《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%9D%E7%97%9B%E5%BD%95.md#1">思痛录</a>》。</p>
-<p>有人将她的《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%80%9D%E7%97%9B%E5%BD%95.md#1">思痛录</a>》归纳为十九痛：</p>
-<p>一痛民族危亡；二痛失去初爱；三痛“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%A2%E6%95%91%E8%BF%90%E5%8A%A8.md#1">抢救运动</a>”；四痛失长女；五痛“镇压反革命运动”和“三反、五反运动”；六痛“肃清反革命运动”；七痛“反胡风反革命集团运动”；八痛反右派运动；九痛大跃进运动；十痛反右倾机会主义运动；十一痛“反击‘利用小说反党’运动”；十二痛<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%A4%A7%E9%9D%A9%E5%91%BD.md#1">文化大革命</a>运动；十三痛挨整的同事朋友；十四痛挨整的清华校友；十五痛挨整的“一二·九运动”战友；十六痛挨整、整人的清华老学长蒋南翔；十七痛整人、挨整的“文艺沙王”周扬；十八痛丈夫杨述；十九痛自己。</p>
-<p>当初，像许多同时代的知识分子一样，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9F%A6%E5%90%9B%E5%AE%9C.md#1">韦君宜</a>把自己对理想人生的追求，全部融注在她对共产主义的信念之中。</p>
+<p>1986年4月，她因脑溢血偏瘫；1987年，右臂摔伤骨折；1989年，再患脑血栓；1991年，骨盆又震裂。就在这接二连三、难以承受的病痛打击和折磨下，在右手神经已经坏死的情况下，她以超常的意志，练习写字、走路、写作。最后，在病床上，用左手，写完了她一生最重要的作品《思痛录》。</p>
+<p>有人将她的《思痛录》归纳为十九痛：</p>
+<p>一痛民族危亡；二痛失去初爱；三痛“抢救运动”；四痛失长女；五痛“镇压反革命运动”和“三反、五反运动”；六痛“肃清反革命运动”；七痛“反胡风反革命集团运动”；八痛反右派运动；九痛大跃进运动；十痛反右倾机会主义运动；十一痛“反击‘利用小说反党’运动”；十二痛文化大革命运动；十三痛挨整的同事朋友；十四痛挨整的清华校友；十五痛挨整的“一二·九运动”战友；十六痛挨整、整人的清华老学长蒋南翔；十七痛整人、挨整的“文艺沙王”周扬；十八痛丈夫杨述；十九痛自己。</p>
+<p>当初，像许多同时代的知识分子一样，韦君宜把自己对理想人生的追求，全部融注在她对共产主义的信念之中。</p>
 <p>她原以为，她信奉的共产主义“理想国”里，有正义，有道德，有人性，有自由，有民主，有平等，有法治，有人权。但是，追随中共50年，她所亲历的，与她曾经信奉的，完全相反。从延安到北京，残酷无情的现实，一次又一次把她的理想击得粉碎。</p>
-<h2><strong>对“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%A2%E6%95%91%E8%BF%90%E5%8A%A8.md#1">抢救运动</a>”的痛思</strong></h2>
+<h2><strong>对“抢救运动”的痛思</strong></h2>
 <p>《思痛录》第一章就是回忆1942年中共搞的延安整风运动。其中最恐怖的一幕是毛泽东发动的“抢救运动”。</p>
 <p>当时，中共怀疑从国民党统治区来的人，都是特务。1943年至1944年，特务越抓越多，从知识分子、中学生发展到小学生，12岁的、11岁的、10岁的，一直到揪出6岁的小特务。</p>
 <p>在延安，中共中央所在地，远近山沟一排排一层层的窑洞里，整夜传出受刑者撕心裂肺的惨叫声。</p>
@@ -30,16 +30,16 @@
 <p>韦君宜写道：“太荒谬了！太可怕了！到这时候我已经完全懂得了这是胡闹，是毫无常识又对共产主义毫无信心的奇怪创造。”</p>
 <p>“革命圣地”延安，曾经是韦君宜们共同向往的温暖的“家”。经历“抢救运动”后，韦君宜写过一首诗，其中写道：</p>
 <p>“家啊！你对我们就是这般模样？……我们如今成了外人，有辱骂，有冷眼，有绳索，有监狱……梦醒来，高原的老北风，吹得热身子冰冷，把心撕碎放在牙缝里咬，看还知道痛不知道？……家呀，我们对得住你，你愧对了我们……”</p>
-<h2><strong>对<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%A4%A7%E9%9D%A9%E5%91%BD.md#1">文化大革命</a>的痛思</strong></h2>
+<h2><strong>对文化大革命的痛思</strong></h2>
 <p>上世纪40年代，经历中共的“抢救运动”后，韦君宜曾和丈夫杨述议论：“现在只在（陕甘宁）边区里边这样干，我们这些人还能忍受，能谅解。以后如果得到了整个中国，再这么干，可千万不行了。成亿的老百姓不会答应的。”</p>
 <p>1949年中共夺取政权后，韦君宜等来的，不是上下齐心协力建设“民主、自由、富强”的新中国，而是没完没了的血腥残暴的人整人的政治运动。</p>
 <p>1966年5月，文化大革命爆发。当年中共在延安“抢救运动”时最坏的做法，在全党、全军、全国范围内重演，甚至有过之而无不及。</p>
-<p>作为人民文学出版社的负责人，韦君宜先是被当成“黑帮”，在“黑帮群”内互相斗；之后，像“猪狗”一样被驱赶回原单位，接受造反派的日夜批斗，被勒令交代罪行。她被打成“死不改悔的走资派”，“反党反毛”，“特务”等。</p>
+<p>作为人民文学出版社的负责人，韦君宜先是被当成“黑帮”，在“黑帮群”内互相斗；之后，像“猪狗”一样被驱赶回原单位，接受造反派的日夜批斗，被勒令交代罪行。她被打成“死不改悔的走资派”“反党反毛”“特务”等。</p>
 <p>整个社会是非、善恶、正邪的颠倒，许多人良知、道德、人心的泯灭，使她精神失常整整三年，其中一年多，完全不认得任何人，成天想自杀。</p>
 <p>她上小学五年级的儿子，1966年夏被红卫兵打傻。她的丈夫、对党忠心耿耿的杨述，被打成“三家村干将”和“反革命修正主义分子”，被造反派用铁棍打得骨断筋折，被开除党籍，后发配到河南劳动改造。她自己被发配到湖北劳动改造。她女儿被下放到云南农场劳动改造。一家五口天各一方长达七年。</p>
 <p>她在《思痛录》中回忆：“后来，我的女儿团团对我说：‘以后我们什么书也不念了，只念一本——《毛泽东选集》，别的书都是反动。’小孩子这句话更使我一通百通。原来如此。一切文化，不是封建文化就是资产阶级文化，新的是修正主义文化。我从小接受的一切教育，自己推行的一切文化工作，全是百分之百‘封资修’。”</p>
 <p>“我们这些知识分子都没有根了，只请用剃刀剃就是了”。</p>
-<h2><strong>晚年的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A7%89%E9%86%92.md#1">觉醒</a></strong></h2>
+<h2><strong>晚年的觉醒</strong></h2>
 <p>1976年文革结束后，韦君宜跟她女儿谈了她的藏在心底很久的想法。她要写一部长篇回忆录，从“抢救运动”开始，一直写到文革结束。她讲，历史是不能被忘却的，她再不把这些亲身经历的悲惨丑恶甚至令人发指的事情记录下来，就得带进棺材里去了。</p>
 <p>于是，她开始了《思痛录》的写作，一边追忆，一边反思。</p>
 <p>其中有一章叫《编辑的忏悔》。她说，1949年中共当政后，她“解放了”，可实际进入了一个囚笼，让她干的事都是欺骗读者、欺骗工农兵。</p>
@@ -62,38 +62,35 @@
 <p>责任编辑：高义</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178910.md#1">王友群：邓小平为什么要制造“六四”屠杀？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/16/n14182814.md#1">王友群：当年信阳为什么饿死105万人？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185226.md#1">王友群：康生小姨子苏枚自杀案后案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/22/n14186223.md#1">王友群：三次被开除党籍的胡耀邦秘书</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Apple AirPods Pro无线耳机 USB-C充电 2倍主动降噪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/11/n14178910.md#1">王友群：邓小平为什么要制造“六四”屠杀？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/16/n14182814.md#1">王友群：当年信阳为什么饿死105万人？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/20/n14185226.md#1">王友群：康生小姨子苏枚自杀案后案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/22/n14186223.md#1">王友群：三次被开除党籍的胡耀邦秘书</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/9/23/n11541717.md#1" target="_blank">林辉：中共70年前承诺建立美国式民主在哪里？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11237722.md#1" target="_blank">美国麻州众议院颁发褒奖状 祝贺法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184085.md#1">龙的奇应：汉代玉笥山民见神迹 唐玄宗与龙几度奇遇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14185106.md#1">认识元宵节和“元宵”七道题 你答对多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/22/n14186921.md#1">【未解之谜】人腹内藏着的另一个“大脑”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/19/n14184470.md#1">【未解之谜】南京风水探秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/20/n14184786.md#1">元宵猜灯谜：100题汉字和成语灯谜 体验传统游艺文化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/27/n14190261.md#1">【全球新闻】美大使驳“东升西降” 批中共压制人民</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/27/n14190260.md#1">【晚间新闻】报告：赵安吉连人带车泡水1小时</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/27/n14190028.md#1">【新闻大破解】产业同盟 美台日重组世界工厂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14188677.md#1">中国陷入大萧条 财经人士揭虚假繁荣真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187587.md#1">吴清重罚做空股市 专家：或引更大撤资风暴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14188834.md#1">中国知名连锁超市“大润发”多店关闭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188312.md#1">张学友上海巡演险陷假唱 中断表演获大赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189229.md#1">《惊奇队长》演员肯内特?米歇尔骤逝 终年49岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188368.md#1">拒签“中国台湾”承诺书？吴沐玹新戏传遭禁播</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/24/n14188351.md#1">辛龙丧妻后神隐4年 星友透露他“最新近况”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189886.md#1">舒淇晒惊人粗壮手臂照 搞笑自曝奇怪病情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：系上鞋带去郊游 ECCO优惠高达5折</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/25/n14188762.md#1">如何得知小狗有病痛？兽医告诉你观察线索</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/22/n14186164.md#1">活着就能存钱 5观念找到储蓄诀窍（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/14/n14181026.md#1">4个坏习惯很伤肾 中医：护肾长寿有3招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/26/n14189509.md#1">婴幼儿在飞机上啼哭怎么办？ 空姐教你这招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/28/n14190636.htm">王友群：后悔加入中共的才女韦君宜</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/2/28/n14190636.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/2/28/n14190636.htm">王友群：亲历十九痛 后悔加入中共的才女</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/28/n14190636.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
